--- a/index.html
+++ b/index.html
@@ -1,49 +1,64 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Arthees | Web Developer</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Arthees | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="overlay">
     <div class="container">
-        <header>
-            <h1>Hello, I'm <span>Arthees</span></h1>
-            <p>Aspiring Web Developer | HTML • CSS • JavaScript</p>
-        </header>
+      <header>
+        <img src="pho.jpeg" alt="Arthees" class="profile-pic" />
+        <h1>Hi, I'm <span>Arthees</span></h1>
+        <p>Web Developer Intern @ ApexPlanet</p>
+      </header>
 
-        <section class="about">
-            <img src="D:\WB_IN\Task 1\pho.jpeg"alt="Profile Picture" />
-            <div>
-                <h2>About Me</h2>
-                <p>
-                    I'm currently doing a Web Development Internship at ApexPlanet Software Pvt. Ltd.
-                    Passionate about designing clean, responsive, and functional websites. Exploring the front-end world with HTML, CSS, and JavaScript!
-                </p>
-            </div>
-        </section>
+      <section class="about">
+        <h2>👨‍💻 About Me</h2>
+        <p>Currently doing a Web Development Internship at ApexPlanet Software Pvt. Ltd. Passionate about designing clean, responsive, and functional websites.</p>
+      </section>
 
-        <section class="interests">
-            <h2>My Interests</h2>
-            <ul>
-                <li>Web Development</li>
-                <li>Open Source Contributions</li>
-                <li>AI & Machine Learning</li>
-            </ul>
-        </section>
+      <section class="interests">
+        <h2>✨ Interests</h2>
+        <ul>
+          <li>Machine Learning & AI</li>
+          <li>Frontend Development</li>
+          <li>Open Source Projects</li>
+          
+        </ul>
+      </section>
 
-        
+      <section class="contact">
+        <h2>📩 Contact Me</h2>
+        <form id="contactForm">
+          <input type="text" id="name" placeholder="Your Name" required />
+          <input type="email" id="email" placeholder="Your Email" required />
+          <textarea id="message" placeholder="Your Message" required></textarea>
+          <button type="submit">Send</button>
+          <p id="formMsg" class="message"></p>
+        </form>
+      </section>
 
-        <section class="interact">
-            <button onclick="showMessage()">Say Hello 👋</button>
-        </section>
+      <section class="todo">
+        <h2>📝 My To-Do List</h2>
+        <input type="text" id="taskInput" placeholder="Add a task..." />
+        <button type="button" onclick="addTask()">Add</button>
+        <ul id="taskList"></ul>
+      </section>
 
-        <footer>
-            <p>© 2025 Arthees | Web Intern @ ApexPlanet</p>
-        </footer>
+      <section class="interact">
+        <button onclick="showMessage()">Say Hello 👋</button>
+      </section>
+
+      <footer>
+        <p>© 2025 Arthees | Web Intern @ ApexPlanet</p>
+      </footer>
     </div>
-
-    <script src="script.js"></script>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
+
+
